--- a/dicee-flutter-master/android/app/build.gradle
+++ b/dicee-flutter-master/android/app/build.gradle
@@ -27,6 +27,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 29
 
+    ndkVersion "22.1.7171670"
+
     lintOptions {
         disable 'InvalidPackage'
     }
