--- a/Clima-Flutter-master/pubspec.yaml
+++ b/Clima-Flutter-master/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   geolocator: ^9.0.2
   http: ^0.13.5
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
