--- a/flash-chat-flutter-master/pubspec.yaml
+++ b/flash-chat-flutter-master/pubspec.yaml
@@ -11,6 +11,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^4.2.2
+  firebase_core: ^2.3.0
+  cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.3
+  flutter_easyloading: ^3.0.5
+  modal_progress_hud_alt: ^1.0.0
 
 dev_dependencies:
   flutter_test:
